[package]
name = "dynhost-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.14", features = ["deflate", "gzip", "brotli", "json", "native-tls", "native-tls-alpn", "blocking"] }
native-tls = "0.2.11"
chrono = "0.4.24"
serde = { version = "1.0.157", features = ["derive"] }
ini = "1.3.0"
